--- a/src/css/wj.css
+++ b/src/css/wj.css
@@ -1,3 +1,14 @@
+.clearfix::after {
+  content: " ";
+  display: block;
+  clear: both;
+  height: 0;
+}
+
+.clearfix {
+  zoom: 1;
+}
+
 .sweet-alert input {
   height: 35px;
   margin-top: 0;
@@ -36,6 +47,40 @@
   color: #f05050;
 }
 
-.dd {
-  max-width: 100%;
+.coursemanagement-list {
+  padding: 10px 0 0;
+  margin-bottom: 21px;
+  background: #fff;
+}
+
+.coursemanagement-wp .panel {
+  margin-bottom: 0;
+}
+
+.coursemanagement-list .panel-heading {
+  padding: 0px 15px;
+  
+}
+
+.wj-a {
+  color: #000;
+  padding: 5px 10px;
+}
+
+.wj-a-active {
+  color: #0085E6;
+  border-bottom: 2px solid #0085E6;
+}
+
+.padding-10 {
+  padding: 10px 0;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.foot-img {
+  width: 100%;
+  max-height: 200px;
 }
