--- a/src/css/wj.css
+++ b/src/css/wj.css
@@ -142,3 +142,7 @@
   position: relative;
   top: -15px;
 }
+
+.mode-body .radio-inline + .radio-inline, .checkbox-inline + .checkbox-inline {
+  margin-left: 0;
+}
