--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -1,21 +1,118 @@
 @charset "UTF-8";
 /* 表格相关 */
-.xc-table > thead > tr > th {
-  padding: 16px 8px 16px 20px;
+.xc-table {
+  border: 1px solid #eeeeee;
+  overflow: hidden;
 }
-
-.xc-table > tbody > tr > td {
-  padding: 12px 8px 12px 20px;
+.xc-table ul {
+  padding: 0;
+  margin: 0;
 }
-
 .xc-table .btn + .btn {
-  margin-left: 5px;
+  margin-right: 5px;
 }
-
-.xc-table .visHideen {
-  visibility: hidden;
+.xc-table li {
+  list-style: none;
+  padding: 12px 10px 12px 25px;
+  line-height: 33px;
+}
+.xc-table .xc-table-head {
+  overflow: hidden;
+  background-color: rgba(243, 243, 243, 1);
+}
+.xc-table .xc-table-head li {
+  border-right: 1px solid #eeeeee;
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+.xc-table-body {
+  background-color: #fff;
+}
+.xc-table-body .col-xs-4,
+.xc-table-body .col-xs-2 {
+  padding: 0px;
+}
+.xc-table-body > div + div {
+  border-left: 1px solid #eeeeee; 
+}
+.xc-table-body > ul {
+  position: relative;
+}
+.xc-table-body .one ul {
+  position: absolute;
+  border-right: 1px solid #eee;
+  border-left: 1px solid #eee;
+}
+.xc-table-body .one .two {
+  width: calc(100% / 3);
+  left: calc(100% / 6);
+  top: 0;
+}
+.xc-table-body .one .four {
+  left:  100%;
+  top: 0;
+  width: calc(50% + 2px);
+}
+.xc-table-body .one .four li {
+  border-right: none;
+}
+.xc-table-body .one .three {
+  width: calc(100% + 3px);
+  left:  100%;
+  top: 0;
+}
+.xc-table-body .one .three.big {
+  width: calc(150% + 5px)
+}
+.xc-table-body .one ul {
+  display: none;
+}
+.xc-table-body li {
+  color: #656565;
+}
+.xc-table-body .active {
+  color: #999999;
+}
+.xc-table-body .active > ul {
+  display: block;
+}
+.xc-table-body .one {
+  width: 16.6666667%;
+}
+.xc-table-body li {
+  border-bottom: 1px solid #eeeeee;
+  background-color: #fff;
+  z-index: 100;
+  cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
 }
 /* 表格相关 */
+/* 单词列表 表格 */
+.table-words {
+  color: #666666;
+  margin-top: 10px;
+}
+.table-words thead {
+  background-color: rgba(243, 243, 243, 1);
+}
+.table-words > thead > tr > th {
+  font-weight: 200;
+  color: #666666;
+}
+.table-words .form-control {
+  width: 60px;
+  color: #ccc;
+  background-color: #fff;
+  border-color: #ccc;
+}
+.table-words tbody {
+  background-color: #fff;
+}
+.table-words .btn + .btn {
+  margin-right: 5px;
+}
+/* 单词列表 表格 end */
 /* 真题冲刺 start*/
 
 .xc-text-group {
@@ -30,9 +127,148 @@
   border: 1px solid rgba(235, 235, 235, 1);
   border-radius: 4px;
   margin-bottom: 20px;
+  position: relative;
+  height: 40px;
+}
+.xc-text-item .error {
+  color: #FF0000;
+}
+.xc-text-item a{
+  color: #656565;
+  text-decoration: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  padding: 60px 0;
 }
 
 /* 真题冲刺 end */
+/* xc-tab tab切換start */
+.xc-tab {
+  overflow: hidden;
+  background-color: #fff;
+}
+.xc-tab ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.xc-tab .xc-tab-head {
+  line-height: 30px;
+  border-bottom: 1px solid rgba(235, 235, 235, 1);
+  color: #989898;
+  position: relative;
+}
+.xc-tab .xc-tab-head .line {
+  position: absolute;
+  height: 2px;
+  display: inline-block;
+  width: 105px;
+  background-color: #108EE9;
+  bottom: 0;
+  left: 0;
+  transition: all 0.2s;
+}
+.xc-tab .xc-tab-head li {
+  display: inline-block;
+  width: 105px;
+  text-align: center;
+  cursor: pointer;
+}
+.xc-tab .xc-tab-head .active {
+  color: #108EE9;
+}
+.xc-tab .xc-tab-body li {
+  display: none;
+  padding-top: 10px;
+}
+.xc-tab .xc-tab-body li.active {
+  display: block;
+}
+.xc-tab .xc-tab-body .form-horizontal > div {
+  overflow: hidden
+}
+.xc-tab .tab-input-group .col-xs-1{
+  padding: 0;
+}
+.xc-tab .tab-input-group .col-xs-1 + .col-xs-1{
+  margin-left: 10px;
+}
+.xc-tab .tab-input-group > div {
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+.xc-tab .form-group-box {
+  overflow: hidden;
+  border-radius: 4px;
+  border: 1px solid rgba(102, 102, 102, 0.34901);
+  box-shadow: 0px 0px 5px rgba(102, 102, 102, 0.34901);
+  margin: 10px 0;
+  padding-top: 10px;
+}
+.xc-tab .error,
+.xc-questions .error {
+  margin: 5px 0;
+  color: #FF0000;
+}
+/* 搞定语法单选题、填空题start */
+.ml5 {
+  margin-left: 5px;
+}
+.xc-questions {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.xc-questions li {
+  border-radius: 4px;
+  border: 1px solid rgba(102, 102, 102, 0.34901);
+  box-shadow: 0px 0px 5px rgba(102, 102, 102, 0.34901);
+  margin: 10px 0;
+  padding: 10px 0;
+}
+.xc-questions li h4 {
+  margin: 0;
+  padding: 0;
+  line-height: 33px;
+}
+.xc-questions li .text-primary,.xc-questions .head {
+  line-height: 33px;
+  cursor: pointer;
+}
+.xc-questions .fillblank {
+  display: inline-block;
+  width: 100px;
+  border-bottom: 1px solid #000;
+  height: 24px;
+  vertical-align: top;
+}
+.xc-questions .tit {
+  color: #999999;
+}
+.xc-questions li input:checked + p {
+  color: #009900;
+}
+/* 搞定语法单选题、填空题end */
+/* 听力测试start */
+.xc-headring form {
+  padding-top: 10px;
+}
+.xc-headring ul {
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.xc-headring ul li {
+  overflow: hidden;
+  padding-top: 10px;
+  border-top: 1px solid rgba(102, 102, 102, 0.34901);
+}
+/* 听力测试end */
+/* tab切換end */
 /* 弹框相关 */
 .clearfix::after {
   content: ' ';
