--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 /* 表格相关 */
+.nodecation:hover {
+  text-decoration: none;
+}
 .xc-table {
   border: 1px solid #eeeeee;
   overflow: hidden;
