--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -1067,6 +1067,21 @@
             padding: 40px 0 30px 0;
           }
 
+.xc-body .course-main .course-body .course-body-center.words-center {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.xc-body .course-main .course-body .course-body-center > div {
+          padding:  0 100px !important;
+}
+
 .xc-body .course-main .course-body .course-body-right {
         width: 308px;
         float: left;
@@ -2176,3 +2191,37 @@
 .xc-banner .xc-banner-btns .xc-banner-prv {
       left: 0;
     }
+.xc-sign {
+  margin: 56px 0;
+  position: relative;
+}
+.xc-sign .sign-box {
+    position: absolute;
+    top: 253px;
+    width: 100%;
+  }
+.xc-sign .xc-sign-header {
+    font-size: 36px;
+    line-height: 50px;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    padding: 0;
+    margin: 30px 0;
+  }
+.xc-sign .xc-sign-btn {
+    color: #fff;
+    line-height: 28px;
+    padding: 11px 35px;
+    border-radius: 32px;
+    border: 2px solid rgba(255, 255, 255, 1);
+    width: 80px;
+    text-align: center;
+    margin: 0 auto;
+  }
+.xc-sign .sign-des {
+    text-align: center;
+    margin-bottom: 30px;
+    left: 22px;
+    color: #fff;
+  }
