--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -1060,6 +1060,15 @@
             padding: 40px 0 30px 0;
           }
         }
+        &.words-center {
+          width: 100%;
+          display: flex;
+          justify-content: space-around;
+          flex-wrap: wrap;
+        }
+        > div {
+          padding:  0 100px !important;
+        }
       }
 
       .course-body-right {
@@ -2165,5 +2174,39 @@
     .xc-banner-prv {
       left: 0;
     }
+  }
+}
+.xc-sign {
+  margin: 56px 0;
+  position: relative;
+  .sign-box {
+    position: absolute;
+    top: 253px;
+    width: 100%;
+  }
+  .xc-sign-header {
+    font-size: 36px;
+    line-height: 50px;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    padding: 0;
+    margin: 30px 0;
+  }
+  .xc-sign-btn {
+    color: #fff;
+    line-height: 28px;
+    padding: 11px 35px;
+    border-radius: 32px;
+    border: 2px solid rgba(255, 255, 255, 1);
+    width: 80px;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .sign-des {
+    text-align: center;
+    margin-bottom: 30px;
+    left: 22px;
+    color: #fff;
   }
 }
