--- a/src/less/main_linye.less
+++ b/src/less/main_linye.less
@@ -253,7 +253,7 @@ a {
   align-items: center;
 }
 .linye-ranking-points .junxian-table-my {
-  background:rgba(91,223,203,1);
+  background:rgba(91, 223, 203, 1);
 }
 
 .linye-ranking-points .table-my img {
@@ -463,7 +463,7 @@ a {
   background: #eff8ff;
 }
 
-/*06积分商城*/
+ /* 06积分商城 */
 
 .linye-shopping .wrap {
   background: #fafafb;
@@ -669,8 +669,132 @@ a {
 .linye-shopping .change-page p {
   margin-right: 18px;
 }
+.linye-shopping .alert-layer {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.linye-shopping .histery-table {
+  width:1000px;
+  height:600px;
+  background:rgba(255, 255, 255, 1);
+  box-shadow:0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+  border-radius:8px;
+}
+.linye-shopping .table-head {
+  width: 100%;
+  height: 57px;
+  border-bottom: 1px solid rgba(235, 235, 235, 1);
+  display: flex;
+  align-items: center;
+  padding-left: 58px;
+  padding-right: 31px;
+}
+.linye-shopping .table-head p {
+  flex-grow: 1;
+  width:64px;
+  height:22px;
+  font-size:16px;
+  color:rgba(51, 51, 51, 1);
+  line-height:22px;
+}
+.linye-shopping .alert-close {
+  flex-shrink: 0;
+  width: 19px;
+  height: 19px;
+  cursor: pointer;
+}
+.linye-shopping .buy-histry-list {
+  width: 944px;
+  height: 530px;
+  margin: 10px auto;
+  overflow: scroll;
+}
+.linye-shopping .buy-histry-item {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-items: center;
+  font-size:14px;
+  color:rgba(153, 153, 153, 1);
+  line-height:20px;
+}
+.linye-shopping .buy-histry-item div {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.linye-shopping .histry-item1 {
+  width: 218px;
+}
+.linye-shopping .histry-item2 {
+  width: 173px;
+}
+.linye-shopping .histry-item3 {
+  width: 163px;
+}
+.linye-shopping .histry-item4 {
+  width: 168px;
+  margin-right: 19px;
+}
+.linye-shopping .histry-item5 {
+  width: 203px;
+}
+.linye-shopping .obtain-item1 {
+  width: 167px;
+}
+.linye-shopping .obtain-item2 {
+  width: 68px;
+}
+.linye-shopping .obtain-item3 {
+  width: 59px;
+  color: #33CBB4;
+}
+.linye-shopping .obtain-item4 {
+  width: 70px;
+}
+.linye-shopping .obtain-item5 {
+  width: 578px;
+}
+.linye-shopping .buy-histry-item-head {
+  border-radius:8px 8px 0px 0px;
+  font-size:14px;
+  color:rgba(102, 102, 102, 1);
+  line-height:20px;
+  font-weight: bold;
+  background: #FAFAFB;
+}
+.linye-shopping .obtain-item-head {
+  color:rgba(102, 102, 102, 1);
+  line-height:20px;
+  font-weight: bold;
+}
+.linye-shopping .singular {
+  background: #fff;
+}
+.linye-shopping .even {
+  background: #FAFAFB;
+}
+.linye-shopping .obtain-num-red {
+  color: #FF4548;
+}
+.linye-shopping .buy-histry-alert {
+  display: none;
+}
+.linye-shopping .obtain-histry-alert {
+  display: none;
+}
 
-/*07个人资料*/
+ /* 07个人资料 */
 .linye-personal-data .data-title {
   padding: 20px 0 14px 32px;
   font-size: 14px;
@@ -759,9 +883,7 @@ a {
   height: 519px;
   background: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
-  border-radius: 0, 0, 8px, 8px;
-  position: relative;
-  
+  border-radius: 0, 0, 8px, 8px;position: relative;
 }
 
 .linye-personal-data .data-detail2 {
@@ -954,7 +1076,22 @@ a {
   padding: 40px 0 33px 0;
 }
 
-/*08修改密码*/
+.linye-personal-data .expire {
+  margin-top: 17px;
+  text-align: center;
+  font-size:14px;
+  color:rgba(255, 255, 255, 1);
+}
+
+.immediately-expire{
+  width:180px;
+  height:30px;
+  background:rgba(255, 69, 72, 1);
+  border-radius:15px;
+  line-height: 30px;
+}
+
+ /* 08修改密码 */
 .linye-change-password .data-title {
   padding: 20px 0 14px 32px;
   font-size: 14px;
@@ -1007,7 +1144,7 @@ a {
   width: 38px;
   height: 38px;
   background: rgba(215, 215, 215, 1);
-  border: 3px solid rgba(255, 255, 255, 1);
+
   border: 3px solid #fff;
   border-radius: 50%;
   text-align: center;
@@ -1129,7 +1266,7 @@ a {
 .linye-change-password .step3 {
   display: none;
 }
-/*09荣耀中心*/
+ /* 09荣耀中心 */
 .linye-honour .data-title {
   padding: 20px 0 14px 32px;
   font-size: 14px;
@@ -1388,8 +1525,7 @@ a {
   height: 141px;
 }
 
-/*029搞定语法*/
-
+ /* 029搞定语法 */
 .linye-finish .data-title {
   padding: 20px 0 14px 32px;
   font-size: 14px;
@@ -1646,7 +1782,7 @@ a {
   width: 543px;
   height: 233px;
 }
-/*30互动学习*/
+ /* 30互动学习 */
 .linye-learn .data-title {
   padding: 20px 0 14px 32px;
   font-size: 14px;
