--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -434,7 +434,7 @@
   border-radius: 8px 8px 8px 8px;
   overflow: hidden;
   box-shadow: 0 3px 7px 1px rgb(235, 235, 235);
-
+  cursor: pointer;
   thead {
     background-color: #0085e6;
   }
@@ -947,6 +947,9 @@
               color: #0085e6;
               border-color: #0085e6;
             }
+            a {
+              color: #999;
+            }
           }
         }
 
@@ -1065,7 +1068,7 @@
           flex-wrap: wrap;
         }
         > div {
-          padding: 0 100px !important;
+          padding: 0 100px;
         }
       }
 
