--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -646,6 +646,12 @@
 
     .course-class-name {
       margin-bottom: 5px;
+      a {
+        color: #333;
+      }
+      a:hover {
+        color: #0085E6;
+      }
     }
 
     .course-class-pro {
@@ -916,7 +922,12 @@
             &.active {
               color: #0085e6;
             }
-
+            a {
+              color: #999999
+            }
+            a:hover {
+              color: #0085e6;
+            }
             & + .course-head-type {
               border-left: 1px solid rgba(235, 235, 235, 1);
             }
