--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -954,7 +954,11 @@
             border-radius: 12px;
             border: 1px solid #fff;
             cursor: pointer;
-            &.active {
+            &.active_always {
+              color: #0085e6;
+              border-color: #0085e6;
+            }
+            &:hover {
               color: #0085e6;
               border-color: #0085e6;
             }
