--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -638,6 +638,12 @@
 .xc-body {
   color: #999;
   font-size: 16px;
+  a:hover {
+    .course-class-name,
+    .xc-class-name {
+      color: #0085E6;
+    }
+  }
   .course-class-item {
     color: #333;
     font-size: 16px;
@@ -646,6 +652,7 @@
 
     .course-class-name {
       margin-bottom: 5px;
+      color: #333;
       a {
         color: #333;
       }
@@ -653,7 +660,7 @@
         color: #0085E6;
       }
     }
-
+    
     .course-class-pro {
       display: table-cell;
       overflow: hidden;
