--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -1005,6 +1005,10 @@
           &:nth-child(2n + 2) {
             background-color: #fff;
           }
+          &.active {
+            background: #EAF1F6;
+            color: #0085E6;
+          }
         }
 
         .course-untiy-imgs {
